# pretty_good_ai_challenge

./: .env.example  .gitignore  README.md  architecture.md  bug_report.md  pyproject.toml  requirements.txt
src/pgai_bot/: __init__.py  analyze_transcripts.py  call_runner.py  config.py  llm_patient.py  scenarios.py  server.py  transcripts.py
transcripts/: call_01_location_updated.txt  call_02_insurance_updated.txt  call_03_location_smooth.txt  call_04_urgent_symptoms.txt  call_05_cancel_appointment.txt  call_06_unclear_lab_results.txt  call_07_weekend_hours.txt  call_08_insurance_system_issue.txt  call_09_medication_refill.txt  call_10_successful_appointment.txt
