[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pretty-good-ai-challenge"
version = "0.1.0"
description = "Voice-bot tester for the Pretty Good AI AI Engineering Challenge"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
